# houedu-django-server

./: .gitignore  .houeduSecrets.json  README.md  api.md  build.sh  pyproject.toml  readme.md  render.yaml  requirements.txt  test.md
categories/: admin.py  models.py  serializers.py
categories/migrations/: 0001_initial.py
client/: asset-manifest.json  index.html
common/: models.py
config/: authentication.py  settings.py  urls.py  views.py
course/: admin.py  models.py
course/migrations/: 0001_initial.py
courses/: admin.py  inlineSerializers.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_tcr_alter_lecture_crs_alter_review_crs_and_more.py  0002_delete_answer.py  0002_initial.py  0003_alter_review_options.py  0003_course_prcie.py  0003_lecture.py  0004_rename_prcie_course_price.py  0004_review.py  0005_course_category_alter_course_crs_info_and_more.py  0006_course_crs_content_course_crs_goal.py
docs/source/: categories.migrations.rst  common.migrations.rst  conf.py  courses.migrations.rst  index.rst  modules.rst  reviews.migrations.rst  users.migrations.rst  users.rst
lecture/: admin.py  models.py
lecture/migrations/: 0001_initial.py
main/: urls.py  views.py
review/: admin.py  models.py
review/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_created_at_alter_review_updated_at.py
teacher/: admin.py  models.py
teacher/migrations/: 0001_initial.py
user/: models.py
user/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_videowatches.py  (+18 more)
(+5 files in other folders)
